Fix z-index

--- a/css/tabs.css
+++ b/css/tabs.css
@@ -93,4 +93,5 @@
     position: absolute;
     right: 0;
     top: 0;
+    z-index: 9999;
 }
